# gSnake

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  FINDINGS.md  LICENSE  README.md  editor-dead-code.json  index.html  package-lock.json  package.json  playwright.config.ts  prd.json  progress.txt  tsconfig.json  versions.json  vite-env.d.ts  vite.config.ts  web-dead-code.json  web-duplication.json
.github/hooks/: README.md  enable-all-hooks.sh  pre-commit
.github/workflows/: ci.yml  dependency-audit.yml  deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
components/: App.svelte  GameOverModal.svelte  RestartButton.svelte
contracts/: README.md  level-definition-semantics.md
contracts/fixtures/: level-definition.invalid-difficulty-value.json  level-definition.invalid-empty-snake.json  level-definition.invalid-missing-total-food.json  level-definition.invalid-negative-coordinate.json  level-definition.invalid-optional-shape.json  level-definition.valid-optionals.json  level-definition.valid.json
data/: levels.json
docs/: dependency-maintenance-policy.md
e2e/: complete-workflow.spec.ts  contract.spec.ts  editor-integration.spec.ts  global-setup.ts  gravity.spec.ts  level-definition.ts  level-editor.spec.ts  level-validation.spec.ts  root-startup.spec.ts  snake-bugs.spec.ts  workflow.spec.ts
e2e/fixtures/: levels.json
engine/: GameEngine.ts  KeyboardHandler.ts  WasmGameEngine.ts
epics/findings/: 2026-01-17.md
epics/folder-structure/: core-flows.md  epic-brief.md  tech-plan.md
epics/gravity-snake/: core-flows.md  techplan.md
epics/rust-core/: extended-core-flows.md  extended-epic-brief.md
epics/wasm-tsrs-integration/: core-flows.md  epic-brief.md  tech-plan.md
gsnake-cli/: Cargo.toml
gsnake-cli/examples/: ui_demo.rs
gsnake-cli/src/: levels.rs  lib.rs  main.rs  ui.rs
gsnake-core/: Cargo.toml  README.md  rustfmt.toml
gsnake-editor/: package-lock.json  package.json  server.ts
gsnake-wasm/: Cargo.toml
gsnake-wasm/src/: lib.rs
main/: index.html
scripts/: README.md  build_core.py  build_fixture_wasm.sh  build_wasm.py  detect-repo-context.sh  generate_changelog_input.sh  generate_ts_types.py  link_web.py  test_integration.py  verify_wasm_levels_sync.mjs
stores/: stores.ts
types/: index.ts
v0.1.0/: index.html
v0.1.1/: index.html
v0.1.2/: index.html
v0.1.3/: index.html
v0.2.0/: index.html
v0.2.1/: index.html
v0.2.2/: index.html
v0.2.3/: index.html
v0.2.4/: index.html
v0.2.5/: index.html
v0.2.6/: index.html
versions/: index.html
(+169 files in other folders)
