[workspace]
resolver = "2"
members = [
    "gsnake-core",
    "gsnake-wasm",
    "gsnake-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tin Nguyen"]
license-file = "LICENSE"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.clippy]
# Deny common mistakes
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Warn on style and complexity issues
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Warn on pedantic lints for better code quality
pedantic = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict
module-name-repetitions = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
cast-possible-truncation = "allow"
cast-possible-wrap = "allow"
cast-sign-loss = "allow"
