[package]
name = "gsnake-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "gsnake_cli"
path = "src/lib.rs"

[[bin]]
name = "gsnake-cli"
path = "src/main.rs"

[dependencies]
gsnake-core = { path = "../gsnake-core" }
serde.workspace = true
serde_json.workspace = true
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
