[package]
name = "gsnake-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
gsnake-core = { path = "../gsnake-core" }
serde.workspace = true
serde_json.workspace = true
# Note: wasm-bindgen and other WASM dependencies will be added in T3
