[package]
name = "gsnake-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gsnake-core = { path = "../gsnake-core" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
wee_alloc = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
